; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_fsleep.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_fsleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { float, i64 }

@NANOSEC = common dso_local global float 0.000000e+00, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float)* @fsleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fsleep(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca %struct.timespec, align 8
  store float %0, float* %2, align 4
  %4 = load float, float* %2, align 4
  %5 = call i64 @floor(float %4)
  %6 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 1
  store i64 %5, i64* %6, align 8
  %7 = load float, float* %2, align 4
  %8 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = sitofp i64 %9 to float
  %11 = fsub float %7, %10
  %12 = load float, float* @NANOSEC, align 4
  %13 = fmul float %11, %12
  %14 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 0
  store float %13, float* %14, align 8
  %15 = call i32 @nanosleep(%struct.timespec* %3, i32* null)
  ret void
}

declare dso_local i64 @floor(float) #1

declare dso_local i32 @nanosleep(%struct.timespec*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
